--- a/myapp/templates/rlp.html
+++ b/myapp/templates/rlp.html
@@ -22,6 +22,8 @@ body{
 		<input type="password" name="password" value="" /><br />
 
 		<input type="submit" value="Log In" />
+		
+		<script type="text/javascript" src="//codecha.org/api/challenge?k=a18133a04e2b479e876843154a229bf4"> </script>
 	</form>
 </body>
 </html>
