--- a/myapp/templates/rlp.html
+++ b/myapp/templates/rlp.html
@@ -20,10 +20,10 @@ body{
 		<input type="text" name="username" value="{{ username}}" /><br />
 		password:
 		<input type="password" name="password" value="" /><br />
-
-		<input type="submit" value="Log In" />
 		
-		<script type="text/javascript" src="//codecha.org/api/challenge?k=a18133a04e2b479e876843154a229bf4"> </script>
+		<!--<script type="text/javascript" src="//codecha.org/api/challenge?k=a18133a04e2b479e876843154a229bf4"> </script>-->
+		
+		<input type="submit" value="Log In" />
 	</form>
 </body>
 </html>
